--- a/css/style.css
+++ b/css/style.css
@@ -326,6 +326,174 @@ header nav .container .buttons a:hover::after {
   width: 100%;
 }
 
+.about-section {
+  padding: 60px 12px 0;
+}
+@media (max-width: 576px) {
+  .about-section {
+    padding-top: 120px;
+  }
+}
+.about-section .content h2 {
+  font-size: 28px;
+  color: #e3925b;
+  font-weight: 600;
+  margin-bottom: 20px !important;
+  line-height: 48px;
+}
+@media (max-width: 576px) {
+  .about-section .content h2 {
+    font-size: 24px;
+    line-height: 40px;
+  }
+}
+.about-section .content h3 {
+  color: #58ab75;
+  font-size: 20px;
+  margin-bottom: 12px !important;
+  position: relative;
+  width: 120px;
+  padding-right: 8px !important;
+}
+.about-section .content h3::after {
+  position: absolute;
+  right: -4px;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  position: absolute;
+  top: 58%;
+  transform: translateY(-50%);
+  content: "";
+  background: #58ab75;
+}
+.about-section .content p,
+.about-section .content li {
+  margin-bottom: 24px !important;
+  font-size: 14px;
+  line-height: 24px;
+  color: #777777;
+}
+.about-section .content li {
+  margin-bottom: 4px !important;
+}
+.about-section .image {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.about-section .image img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
+  border-radius: 12px;
+}
+.about-section .our-services {
+  padding: 24px 0;
+}
+.about-section .our-services h4 {
+  text-align: center;
+  color: #58ab75;
+  font-size: 24px;
+  font-weight: 600;
+  margin-bottom: 32px !important;
+}
+.about-section .our-services .service {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 8px;
+  border-radius: 8px;
+  border: 1px solid #e3925b;
+  background: #c4c4c4;
+  padding: 32px 0;
+}
+.about-section .our-services .service img {
+  height: 38px;
+}
+.about-section .our-services .service h6 {
+  font-size: 16px;
+  color: #777777;
+}
+.about-section .appImgs {
+  padding: 70px 0;
+  position: relative;
+}
+.about-section .appImgs h2 {
+  color: #e3925b;
+  text-align: center;
+  font-size: 28px;
+  margin-bottom: 8px !important;
+}
+.about-section .appImgs p {
+  color: #777777;
+  font-size: 14px;
+  text-align: center;
+  margin-bottom: 16px !important;
+}
+.about-section .appImgs .swiper {
+  width: 100%;
+  padding: 30px 0;
+  position: relative;
+  display: flex;
+}
+.about-section .appImgs .swiper .swiper-slide {
+  background-position: center;
+  background-size: cover;
+  width: 234px;
+  height: 507px;
+  position: relative;
+}
+@media (max-width: 768px) {
+  .about-section .appImgs .swiper .swiper-slide {
+    width: 175.5px;
+    height: 380px;
+  }
+}
+.about-section .appImgs .swiper .swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  border-radius: 16px;
+}
+.about-section .appImgs .swiper .frame {
+  width: 267px;
+  height: 532px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+}
+@media (max-width: 768px) {
+  .about-section .appImgs .swiper .frame {
+    width: 202.5px;
+    height: 401px;
+  }
+}
+.about-section .appImgs .swiper-wrapper {
+  height: auto;
+}
+.about-section .appImgs .swiper-3d .swiper-slide-shadow,
+.about-section .appImgs .swiper-3d .swiper-slide-shadow-bottom,
+.about-section .appImgs .swiper-3d .swiper-slide-shadow-left,
+.about-section .appImgs .swiper-3d .swiper-slide-shadow-right,
+.about-section .appImgs .swiper-3d .swiper-slide-shadow-top {
+  border-radius: 16px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.062745098);
+  border: 4px solid #fff;
+}
+.about-section .appImgs .swiper-3d .swiper-slide-shadow-left {
+  background: linear-gradient(to left, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0));
+}
+.about-section .appImgs .swiper-3d .swiper-slide-shadow-right {
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0));
+}
+
 .parteners .swiper {
   align-items: center;
   display: flex;
@@ -398,366 +566,6 @@ header nav .container .buttons a:hover::after {
   font-size: 16px;
 }
 
-.faqs {
-  padding: 30px 0;
-}
-.faqs.faq-page .faqs-content .accordion .accordion-item:nth-child(n+5) {
-  display: block !important;
-  transition: all 0.5s ease-in-out;
-}
-.faqs.faq-page .faqs-content .accordion .accordion-item:last-child {
-  border: 0 !important;
-}
-.faqs .faqs-content {
-  padding-top: 60px;
-}
-.faqs .faqs-content h3 {
-  font-size: 20px;
-  color: #58ab75;
-  font-weight: 600;
-  margin-bottom: 28px;
-}
-.faqs .faqs-content h3 i {
-  transform: scaleX(-1);
-}
-.faqs .faqs-content .accordion .accordion-item:nth-child(n+5) {
-  display: none;
-  transition: all 0.5s ease-in-out;
-}
-.faqs .faqs-content .accordion.show .accordion-item:nth-child(n+5) {
-  display: block;
-}
-.faqs .faqs-content .showbtn {
-  border: none;
-  outline: none;
-  background: none;
-  color: #58ab75;
-  margin-top: 16px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 4px;
-}
-
-.services-section {
-  padding: 30px 0;
-}
-.services-section .txt {
-  text-align: center;
-  color: #000;
-  font-weight: 500;
-}
-.services-section .hed {
-  font-weight: 600;
-  color: #58ab75;
-  text-align: center;
-  margin-bottom: 48px;
-}
-.services-section .shaded_card {
-  border-radius: 4px;
-  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-  padding: 24px 16px;
-  height: 100%;
-}
-.services-section .shaded_card a {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.services-section .shaded_card .img img {
-  max-width: 100%;
-}
-.services-section .shaded_card h3 {
-  text-align: center;
-  color: #000;
-  font-size: 18px;
-  font-weight: 600;
-  margin: 36px 0 24px;
-}
-.services-section .shaded_card h4 {
-  text-align: center;
-  color: #58ab75;
-  font-size: 14px;
-  font-weight: 600;
-  margin-top: 16px;
-  margin-bottom: 0;
-}
-.services-section .shaded_card p {
-  text-align: center;
-  color: #000;
-  font-size: 14px;
-  line-height: 24px;
-  margin: 0;
-}
-
-.privacy-policy {
-  padding: 40px 0;
-}
-.privacy-policy br {
-  line-height: 24px !important;
-}
-.privacy-policy h3 {
-  font-size: 20px;
-  color: #58ab75;
-  font-weight: 600;
-  margin-bottom: 14px;
-}
-.privacy-policy p {
-  font-size: 15px;
-  color: #484848;
-}
-.privacy-policy h6 {
-  font-size: 16px;
-  color: #000;
-  font-weight: 600;
-  margin-bottom: 14px;
-}
-
-.packages {
-  margin: 48px 0;
-  padding: 42px 0;
-  overflow-x: hidden;
-  position: relative;
-}
-.packages svg {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-}
-.packages .txt {
-  text-align: center;
-  color: #000;
-  font-weight: 500;
-  margin-bottom: 48px;
-}
-.packages .hed {
-  font-weight: 600;
-  color: #58ab75;
-  text-align: center;
-}
-.packages .package-card {
-  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  justify-content: space-between;
-  background-color: #fff;
-  border-radius: 8px;
-  padding: 32px 24px;
-  height: 360px;
-  position: relative;
-}
-.packages .package-card.p2::after {
-  content: "\f005";
-  font-family: "Font Awesome 6 Pro";
-  border-radius: 50%;
-  position: absolute;
-  left: 16px;
-  top: 24px;
-  font-size: 20px;
-  color: #0f70e5;
-}
-.packages .package-card .title {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 16px;
-}
-.packages .package-card .title h4 {
-  margin: 0;
-  font-weight: 500;
-  font-size: 16px;
-  color: #000;
-}
-.packages .package-card .title .price {
-  font-size: 24px;
-  color: #0f70e5;
-  font-weight: bold;
-  margin: 0;
-}
-.packages .package-card p {
-  font-size: 12px;
-  line-height: 22px;
-  text-align: center;
-  margin: 0;
-}
-.packages .package-card a {
-  border: 1px solid #0f70e5;
-  color: #0f70e5;
-  width: 100%;
-  font-size: 14px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: 0.3s ease-in-out;
-  position: relative;
-  font-weight: 500;
-  border-radius: 4px;
-  padding: 2px 0;
-  align-self: flex-start;
-}
-.packages .package-card a span {
-  color: #0f70e5;
-}
-.packages .package-card a:hover {
-  border-color: transparent;
-  background: #0f70e5;
-}
-.packages .package-card a:hover span {
-  color: #fff;
-}
-.packages .package-card a:hover::after {
-  width: 100%;
-}
-
-.features {
-  padding: 60px 0;
-  position: relative;
-  overflow-x: hidden;
-}
-.features .circle1 {
-  width: 300px;
-  height: 300px;
-  border-radius: 50%;
-  background: #d2edf8;
-  position: absolute;
-  left: -80px;
-  top: 50px;
-  z-index: -1;
-}
-.features .circle2 {
-  width: 250px;
-  height: 250px;
-  border-radius: 50%;
-  background: #d2edf8;
-  position: absolute;
-  right: -20px;
-  bottom: 0;
-  z-index: -1;
-}
-.features .hed {
-  font-weight: 600;
-  color: #000;
-  margin-bottom: 48px;
-  text-align: center;
-}
-.features .feature-card {
-  width: 100%;
-  height: 200px;
-  background: #fff;
-  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-  border-radius: 8px;
-  padding: 16px;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  position: relative;
-}
-.features .feature-card::after {
-  content: "";
-  width: 0;
-  position: absolute;
-  top: -2px;
-  height: 2px;
-  left: 0;
-  background: #58ab75;
-  transition: all 0.4s ease-in-out;
-}
-.features .feature-card::before {
-  content: "";
-  width: 0;
-  position: absolute;
-  bottom: -2px;
-  height: 2px;
-  right: 0;
-  background: #58ab75;
-  transition: all 0.4s ease-in-out;
-}
-.features .feature-card:hover {
-  border-radius: 0;
-}
-.features .feature-card:hover::after {
-  width: 100%;
-}
-.features .feature-card:hover::before {
-  width: 100%;
-}
-.features .feature-card .icon {
-  height: 100px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.features .feature-card .icon img {
-  max-height: 60px;
-}
-.features .feature-card h6 {
-  text-align: center;
-  color: #000;
-  font-weight: 500;
-  margin-top: 16px;
-  line-height: 28px;
-  font-size: 16px;
-}
-
-.testmonials {
-  padding: 30px;
-}
-.testmonials .hed {
-  font-weight: 600;
-  color: #000;
-  margin-bottom: 48px;
-  text-align: center;
-}
-@media (max-width: 768px) {
-  .testmonials {
-    padding: 16px;
-  }
-}
-.testmonials .swiper {
-  max-height: 400px;
-  padding: 16px;
-}
-.testmonials .testmonial-card {
-  width: 100%;
-  height: 320px;
-  background: #fff;
-  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-  border-radius: 8px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  flex-direction: column;
-  border: 2px solid transparent;
-  transition: all 0.3s ease-in-out;
-  gap: 18px;
-  padding: 32px 16px;
-}
-.testmonials .testmonial-card:hover {
-  box-shadow: none;
-  border-color: #56e0e0;
-}
-.testmonials .testmonial-card i {
-  font-size: 30px;
-  color: #56e0e0;
-}
-.testmonials .testmonial-card p {
-  text-align: center;
-  font-style: italic;
-  font-size: 12px;
-  font-weight: 500;
-  line-height: 22px;
-  margin: 0;
-}
-.testmonials .testmonial-card h5 {
-  margin: 0;
-  font-size: 16px;
-  font-weight: 600;
-  color: #000;
-  line-height: 36px;
-}
-
 .contact-section {
   width: 100%;
   padding: 60px 0;
@@ -825,7 +633,7 @@ header nav .container .buttons a:hover::after {
 }
 
 footer {
-  background: #f3f3f9;
+  background: #fdf7f3;
 }
 footer .container .col-12 {
   padding: 42px 32px 24px;
@@ -874,7 +682,7 @@ footer .copy p a {
   color: #58ab75;
 }
 footer .copy p a img {
-  width: 36px;
+  height: 28px;
 }
 footer .social-media {
   display: flex;
@@ -888,7 +696,7 @@ footer .social-media a {
   transition: all 0.3s ease-in-out;
 }
 footer .social-media a:hover {
-  color: #0f70e5;
+  color: #e3925b;
 }
 footer .social-media a:hover i {
   transition: 0.3s ease-in-out;
