--- a/css/style.scss
+++ b/css/style.scss
@@ -335,6 +335,170 @@ header {
     }
   }
 }
+.about-section {
+  padding: 60px 12px 0;
+  @media (max-width: 576px) {
+    padding-top: 120px;
+  }
+  .content {
+    h2 {
+      font-size: 28px;
+      color: $dark-green;
+      font-weight: 600;
+      margin-bottom: 20px !important;
+      line-height: 48px;
+      @media (max-width: 576px) {
+        font-size: 24px;
+        line-height: 40px;
+      }
+    }
+    h3 {
+      color: $main;
+      font-size: 20px;
+      margin-bottom: 12px !important;
+      position: relative;
+      width: 120px;
+      padding-right: 8px !important;
+      &::after {
+        position: absolute;
+        right: -4px;
+        width: 8px;
+        height: 8px;
+        border-radius: 50%;
+        position: absolute;
+        top: 58%;
+        transform: translateY(-50%);
+        content: '';
+        background: $main;
+      }
+    }
+    p,
+    li {
+      margin-bottom: 24px !important;
+      font-size: 14px;
+      line-height: 24px;
+      color: $gray;
+    }
+    li {
+      margin-bottom: 4px !important;
+    }
+  }
+  .image {
+    width: 100%;
+    height: 100%;
+    @include centerFlex();
+    img {
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+      border-radius: 12px;
+    }
+  }
+  .our-services {
+    padding: 24px 0;
+    h4 {
+      text-align: center;
+      color: $main;
+      font-size: 24px;
+      font-weight: 600;
+      margin-bottom: 32px !important;
+    }
+    .service {
+      @include centerFlex();
+      flex-direction: column;
+      gap: 8px;
+      border-radius: 8px;
+      border: 1px solid $dark-green;
+      background: $light_gray;
+      padding: 32px 0;
+      img {
+        height: 38px;
+      }
+      h6 {
+        font-size: 16px;
+        color: $gray;
+      }
+    }
+  }
+  .appImgs {
+    padding: 70px 0;
+    position: relative;
+    h2 {
+      color: $dark-green;
+      text-align: center;
+      font-size: 28px;
+      margin-bottom: 8px !important;
+    }
+    p {
+      color: $gray;
+      font-size: 14px;
+      text-align: center;
+      margin-bottom: 16px !important;
+    }
+    .swiper {
+      width: 100%;
+      padding: 30px 0;
+      position: relative;
+      display: flex;
+      .swiper-slide {
+        background-position: center;
+        background-size: cover;
+        width: 234px;
+        height: 507px;
+        position: relative;
+        @media (max-width: 768px) {
+          width: 175.5px;
+          height: 380px;
+        }
+        img {
+          display: block;
+          width: 100%;
+          height: 100%;
+          border-radius: 16px;
+        }
+      }
+      .frame {
+        width: 267px;
+        height: 532px;
+        @media (max-width: 768px) {
+          width: 202.5px;
+          height: 401px;
+        }
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 2;
+      }
+    }
+    .swiper-wrapper {
+      height: auto;
+    }
+    .swiper-3d .swiper-slide-shadow,
+    .swiper-3d .swiper-slide-shadow-bottom,
+    .swiper-3d .swiper-slide-shadow-left,
+    .swiper-3d .swiper-slide-shadow-right,
+    .swiper-3d .swiper-slide-shadow-top {
+      border-radius: 16px;
+      box-shadow: 0px 2px 4px #00000010;
+      border: 4px solid $white;
+    }
+    .swiper-3d .swiper-slide-shadow-left {
+      background: linear-gradient(
+        to left,
+        rgba(0, 0, 0, 0.2),
+        rgba(0, 0, 0, 0)
+      );
+    }
+    .swiper-3d .swiper-slide-shadow-right {
+      background: linear-gradient(
+        to right,
+        rgba(0, 0, 0, 0.2),
+        rgba(0, 0, 0, 0)
+      );
+    }
+  }
+}
 .parteners {
   .swiper {
     align-items: center;
@@ -408,362 +572,6 @@ header {
     }
   }
 }
-.faqs {
-  padding: 30px 0;
-  &.faq-page {
-    .faqs-content {
-      .accordion .accordion-item:nth-child(n + 5) {
-        display: block !important;
-        transition: all .5s ease-in-out;
-      }
-      .accordion .accordion-item:last-child {
-        border: 0 !important;
-      }
-    }
-  }
-  .faqs-content {
-    padding-top: 60px;
-    h3 {
-      font-size: 20px;
-      color: $main;
-      font-weight: 600;
-      margin-bottom: 28px;
-      i {
-        transform: scaleX(-1);
-      }
-    }
-    .accordion .accordion-item:nth-child(n + 5) {
-      display: none;
-      transition: all .5s ease-in-out;
-    }
-    .accordion.show .accordion-item:nth-child(n + 5) {
-      display: block;
-    }
-    .showbtn {
-      border: none;
-      outline: none;
-      background: none;
-      color: $main;
-      margin-top: 16px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 4px;
-    }
-  }
-}
-.services-section {
-  padding: 30px 0;
-  .txt {
-    text-align: center;
-    color: #000;
-    font-weight: 500;
-  }
-  .hed {
-    font-weight: 600;
-    color: $main;
-    text-align: center;
-    margin-bottom: 48px;
-  }
-  .shaded_card {
-    border-radius: 4px;
-    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-    padding: 24px 16px;
-    height: 100%;
-    a {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-    .img img {
-      max-width: 100%;
-    }
-    h3 {
-      text-align: center;
-      color: #000;
-      font-size: 18px;
-      font-weight: 600;
-      margin: 36px 0 24px;
-    }
-    h4 {
-      text-align: center;
-      color: $main;
-      font-size: 14px;
-      font-weight: 600;
-      margin-top: 16px;
-      margin-bottom: 0;
-    }
-    p {
-      text-align: center;
-      color: #000;
-      font-size: 14px;
-      line-height: 24px;
-      margin: 0;
-    }
-  }
-}
-.privacy-policy {
-  padding: 40px 0;
-  br {
-    line-height: 24px !important;
-  }
-  h3 {
-    font-size: 20px;
-    color: $main;
-    font-weight: 600;
-    margin-bottom: 14px;
-  }
-  p {
-    font-size: 15px;
-    color: #484848;
-  }
-  h6 {
-    font-size: 16px;
-    color: #000;
-    font-weight: 600;
-    margin-bottom: 14px;
-  }
-}
-.packages {
-  margin: 48px 0;
-  padding: 42px 0;
-  overflow-x: hidden;
-  position: relative;
-  svg {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-  }
-  .txt {
-    text-align: center;
-    color: #000;
-    font-weight: 500;
-    margin-bottom: 48px;
-  }
-  .hed {
-    font-weight: 600;
-    color: $main;
-    text-align: center;
-  }
-  .package-card {
-    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: space-between;
-    background-color: #fff;
-    border-radius: 8px;
-    padding: 32px 24px;
-    height: 360px;
-    position: relative;
-    &.p2::after {
-      content: '\f005';
-      font-family: "Font Awesome 6 Pro";
-      border-radius: 50%;
-      position: absolute;
-      left: 16px;
-      top: 24px;
-      font-size: 20px;
-      color: #0f70e5;
-    }
-    .title {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 16px;
-      h4 {
-        margin: 0;
-        font-weight: 500;
-        font-size: 16px;
-        color: #000;
-      }
-      .price {
-        font-size: 24px;
-        color: #0f70e5;
-        font-weight: bold;
-        margin: 0;
-      }
-    }
-    p {
-      font-size: 12px;
-      line-height: 22px;
-      text-align: center;
-      margin: 0;
-    }
-    a {
-      border: 1px solid #0f70e5;
-      color: #0f70e5;
-      width: 100%;
-      font-size: 14px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      transition: .3s ease-in-out;
-      position: relative;
-      font-weight: 500;
-      border-radius: 4px;
-      padding: 2px 0;
-      align-self: flex-start;
-      span {
-        color: #0f70e5;
-      }
-      &:hover {
-        border-color: transparent;
-        background: #0f70e5;
-        span {
-          color: #fff;
-        }
-        &::after {
-          width: 100%;
-        }
-      }
-    }
-  }
-}
-.features {
-  padding: 60px 0;
-  position: relative;
-  overflow-x: hidden;
-  .circle1 {
-    width: 300px;
-    height: 300px;
-    border-radius: 50%;
-    background: #d2edf8;
-    position: absolute;
-    left: -80px;
-    top: 50px;
-    z-index: -1;
-  }
-  .circle2 {
-    width: 250px;
-    height: 250px;
-    border-radius: 50%;
-    background: #d2edf8;
-    position: absolute;
-    right: -20px;
-    bottom: 0;
-    z-index: -1;
-  }
-  .hed {
-    font-weight: 600;
-    color: #000;
-    margin-bottom: 48px;
-    text-align: center;
-  }
-  .feature-card {
-    width: 100%;
-    height: 200px;
-    background: #fff;
-    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-    border-radius: 8px;
-    padding: 16px;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    position: relative;
-    &::after {
-      content: '';
-      width: 0;
-      position: absolute;
-      top: -2px;
-      height: 2px;
-      left: 0;
-      background: $main;
-      transition: all .4s ease-in-out;
-    }
-    &::before {
-      content: '';
-      width: 0;
-      position: absolute;
-      bottom: -2px;
-      height: 2px;
-      right: 0;
-      background: $main;
-      transition: all .4s ease-in-out;
-    }
-    &:hover {
-      border-radius: 0;
-      &::after {
-        width: 100%;
-      }
-      &::before {
-        width: 100%;
-      }
-    }
-    .icon {
-      height: 100px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      img {
-        max-height: 60px;
-      }
-    }
-    h6 {
-      text-align: center;
-      color: #000;
-      font-weight: 500;
-      margin-top: 16px;
-      line-height: 28px;
-      font-size: 16px;
-    }
-  }
-}
-.testmonials {
-  padding: 30px;
-  .hed {
-    font-weight: 600;
-    color: #000;
-    margin-bottom: 48px;
-    text-align: center;
-  }
-  @media (max-width: 768px) {
-    padding: 16px;
-  }
-  .swiper {
-    max-height: 400px;
-    padding: 16px;
-  }
-  .testmonial-card {
-    width: 100%;
-    height: 320px;
-    background: #fff;
-    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-    border-radius: 8px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction: column;
-    border: 2px solid transparent;
-    transition: all .3s ease-in-out;
-    &:hover {
-      box-shadow: none;
-      border-color: #56e0e0;
-    }
-    gap: 18px;
-    padding: 32px 16px;
-    i {
-      font-size: 30px;
-      color: #56e0e0;
-    }
-    p {
-      text-align: center;
-      font-style: italic;
-      font-size: 12px;
-      font-weight: 500;
-      line-height: 22px;
-      margin: 0;
-    }
-    h5 {
-      margin: 0;
-      font-size: 16px;
-      font-weight: 600;
-      color: #000;
-      line-height: 36px;
-    }
-  }
-}
 .contact-section {
   width: 100%;
   padding: 60px 0;
@@ -832,7 +640,7 @@ header {
   }
 }
 footer {
-  background: #f3f3f9;
+  background: #fdf7f3;
   .container .col-12 {
     padding: 42px 32px 24px;
     @media (max-width: 576px) {
@@ -877,7 +685,7 @@ footer {
       a {
         color: $main;
         img {
-          width: 36px;
+          height: 28px;
         }
       }
     }
@@ -892,7 +700,7 @@ footer {
       color: $main;
       transition: all .3s ease-in-out;
       &:hover {
-        color: #0f70e5;
+        color: $dark-green;
         i {
           transition: .3s ease-in-out;
           transform: scale(1.5);
